Enablie sorting and filtering of papers

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -16,12 +16,16 @@
  *= require paper-toast/paper-toast
  *= require paper-icon-button/paper-icon-button
  *= require paper-shadow/paper-shadow
- *= require paper-spinner/paper-spinner
+ *= require paper-button/paper-button
  *= require paper-button/paper-button
  *= require paper-input/paper-input
  *= require paper-input/paper-autogrow-textarea
- *= require paper-button/paper-button
+ *= require paper-item/paper-item
+ *= require paper-dropdown/paper-dropdown
+ *= require paper-dropdown/paper-dropdown-transition
+ *= require paper-dropdown-menu/paper-dropdown-menu
  *= require paper-progress/paper-progress
  *= require paper-dialog/paper-action-dialog
+ *= require paper-spinner/paper-spinner
 
 -->
