--- a/app/assets/components/subpages/oj-papers-page.html
+++ b/app/assets/components/subpages/oj-papers-page.html
@@ -2,17 +2,49 @@
   <template>
       
     <section layout vertical class="boiler-plate">
-      <h1>{{header}}</h1>
-      <oj-paper-collection  src={{src}}></oj-paper-collection>
+      <div layout horizontal>
+          <h1 flex>{{header}}</h1>
+          <paper-dropdown-menu on-core-select={{changeSortOrder}}>
+              <paper-dropdown class="dropdown">
+                  <core-menu class="menu" selected=3>
+                      <paper-item key=title>Article Title</paper-item>
+                      <paper-item key=author.name>Author</paper-item>
+                      <paper-item key=state>State</paper-item>
+                      <paper-item key=created_at desc>Submitted Date</paper-item>
+                      <paper-item key=created_at>Submitted Date (Asc)</paper-item>
+                  </core-menu>
+              </paper-dropdown>
+          </paper-dropdown-menu>
+      </div>
+      <oj-paper-collection
+              src={{src}}
+              sortKey={{sortKey}}
+              sortDesc={{sortDesc}}
+              ></oj-paper-collection>
     </section>
 
     <style>
+
+        paper-dropdown-menu {
+            width: 200px;
+        }
+
     </style>
 
   </template>
 
   <script>
-    Polymer({})
+    Polymer({
+
+        sortKey:  'created_at',
+        sortDesc: true,
+
+        changeSortOrder: function(event, detail) {
+            this.sortKey  = detail.item.getAttribute('key');
+            this.sortDesc = detail.item.hasAttribute('desc');
+        }
+
+    })
   </script>
 
 </polymer-element>
