--- a/app/assets/components/ui-elements/all.html
+++ b/app/assets/components/ui-elements/all.html
@@ -5,7 +5,7 @@
 
  *= require ./oj-annotation
  *= require ./oj-paper-row
- *= require ./oj-reviewer
+ *= require ./oj-user-tag
  *= require ./oj-editor-paper-controls
  *= require_tree .
 -->
