Refactor Polymer Expressions

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -8,8 +8,8 @@
  *= require polymer-components
  *= require third-party-components
 
+ *= require mixins/all
  *= require oj-global-expressions
-*= require oj-global-paper-expressions
 
  *= require elements/all
  *= require ui-elements/all
