--- a/app/assets/components/mixins/oj-paper-expressions.html
+++ b/app/assets/components/mixins/oj-paper-expressions.html
@@ -1,6 +1,6 @@
 <script>
 
-    $.extend(  PolymerExpressions.prototype, {
+    window.Oj.paperExpressions = {
 
         actionForPaper: function(paper){
             if (!paper) return;
@@ -40,6 +40,6 @@
                 return 'author';
         }
 
-    });
+    };
 
 </script>
